SHOR-123: Fix panel clipping

--- a/scss/civicrm/contact/pages/_dataviz.scss
+++ b/scss/civicrm/contact/pages/_dataviz.scss
@@ -68,7 +68,8 @@
 
   // Fixes clipping on Events charts
   #events,
-  #participants {
+  #participants,
+  #monthly-volume-chart {
     svg {
       height: 210px;
 
